added booking filtering for guide's booking based on status